
Tue, Nov 17, 2018 : Released Refine 1.8.21

- ref_driver repartitions before first pass to improve partition "shape"
- gather tecplot refactored for multiple scalars and T-infinity viz plugin
- added tri-surface normal deviation constraint
- added tri-surface normal deviation to smooth/swap tri quality
- ref_geom_test tessellation can be adapted before volume generation (w/ --surf)
- added non-parallel surface adaptation without volume (w/ swap)
- added non-parallel .su2 export
- extracted ref_recon from ref_metric
- ref_interp_test --field interpolates solution
- ref_metric_test --fixed-point metric from series of solb
- configuration does not need fortran compiler, gfortran or ifort assumed
- ref_metric_test --kexact parallel and can grow stencil for conditioning

Tue, Sep 11, 2018 : Released Refine 1.8.20

- added limits (current min/max) on ratio during operations
- sequential 2D continuously interpolates metric 

Thu, Aug 30, 2018 : Released Refine 1.8.19

- added histogram movies
- uv_area sign based on topology
- triangle windings are flipped for normal into domain
- cavity operator for edge split on boundary
- new implementation of tet smoothing via max-min optimization
- multiscale metric with L2-projection and kexact Hessian reconstruction
- edge subdiv to reduce parallel partition artifacts
- ParMETIS uses edge weights
- ref_geom .egads model can be tessellated with AFLR
- parallel localization of background grid
- global variables eliminated
- shared libraries linked with rpath
- source code google formatted via clang-format
- EGADSlite support
- meshb format caches EAGDSlite data and ref_geom CAD association
- parameter jumps in EGADS models stored explicitly
- eliminated const char * C++ warnings
- curvature based metric
- now under Apache, version 2
- ref_stitch removed
- ref_projectable removed, no longer supported
- ref_plot3d and ref_quality removed
- jacobian form of the mean ratio
- ref_geom parallel

Mon, Jun 26, 2017 : Released Refine 1.8.18
