@@ -1,4 +1,6 @@
 
+- ref_metric_test --fixed-point asks for the timestep_increment
+
 Tue, Nov 17, 2018 : Released Refine 1.8.21
 
 - ref_driver repartitions before first pass to improve partition "shape"
